Fix horizontal scrolling on mobile

--- a/docs/components/CodeSplit.scss
+++ b/docs/components/CodeSplit.scss
@@ -62,7 +62,9 @@
                 max-width: calc(50em - 40px);
             }
         }
+    }
 
+    @media (min-width: 800px) {
         .dxe-codesplit-right {
             max-width: calc(50em);
         }
